try to get the website

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://bghjmn32.github.io/hongyiluo.github.io/"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Website of Jane Doe"
