--- a/config.toml
+++ b/config.toml
@@ -17,3 +17,5 @@ enableRobotsTXT = true
 pygmentsUseClasses = true
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
+
+publishDir: "docs"
