still trying to fix

--- a/config.toml
+++ b/config.toml
@@ -18,4 +18,4 @@ pygmentsUseClasses = true
 pygmentsCodeFences = true
 pygmentsCodefencesGuessSyntax = true
 
-publishDir: "docs"
+publishDir = "docs"
